# scraping_research

./: .gitignore  README.md  base_class.py  main,py  main.py  ollama.py
company-scraper/: pom.xml
company-scraper/src/main/java/com/projectleo/scraper/: App.java
job-scraper/: .gitignore  company_urls.txt  job_results.sql  pom.xml
job-scraper/src/main/java/com/projectleo/scraper/: CsvUtil.java  GenericScraper.java  JobResult.java  Main.java  OpenAIClient.java  OpenAIError.java  OpenAIResponse.java  Scraper.java
job-scraper/src/main/java/com/projectleo/scraper/database/: CsvUtil.java  Database.java
job-scraper/src/main/java/com/projectleo/scraper/openai/: OpenAIClient.java  OpenAIError.java  OpenAIResponse.java
job-scraper/src/main/java/com/projectleo/scraper/scrapers/: GenericScraper.java  JobResult.java  Scraper.java
job-scraper/src/main/java/com/projectleo/scraper/util/: CsvUtil.java  FileUtil.java  PropertiesUtil.java
job-scraper/src/main/resources/: log4j2.xml
job-scraper/src/test/java/com/projectleo/scraper/: AppTest.java
llm_research/: huggingface.py
python-prototypes/llm_research/: ollama_experiments.py  openai_experiments.py
python_prototypes/: base_class.py  main.py
rust_scraping/: Cargo.toml  README.md
rust_scraping/src/: jobresult.rs  main.rs  scraper_impls.rs  scraper_trait.rs
