[package]
name = "rust_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api-rs = "4.1.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
serde_json = "1.0.120"
