[package]
name = "rust_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"
logging = "0.1.0"
openai-api-rs = "4.1.1"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
serde_json = "1.0.120"
