[package]
name = "rust_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
env_logger = "0.11.3"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.22"
logging = "0.1.0"
openai-api-rs = "4.1.1"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["time"] }
url = "2.5.2"
